--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <section class="nav">
             <div class="nav-icon">
                 <img src="image/footer logo.png" alt="">
-                <h1>Hero Travel</h1>
+                <h1>Hero <span class="font">Travel</span></h1>
             </div>
             <div class="nav-container">
-                <li>Home</li>
+                <li class="font">Home</li>
                 <li>Pakage</li>
                 <li>Testimonial</li>
                 <li>Blog</li>
@@ -62,7 +62,9 @@
                 <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
                 <button style="margin: 20px;" class="special">Read more</button>
             </div>
-            <img src="image/Rectangle 4.png" alt="">
+            <div class="tours-img">
+                <img src="image/Rectangle 4.png" alt="">
+            </div>
         </div>
         <div class="destination">
             <h1>Choose Your Destination</h1>
@@ -140,7 +142,7 @@
         </section>
         <section class="deals-2">
             <div class="deals-container">
-                <div class="deals-container-content">
+                <div class="deals-container-content-2">
                     <div class="deals-container-content-logo">
                         <p class="common-p"><i class="fa-regular fa-clock"></i> 7 Day / 6 Night</p>
                         <p class="common-p"><i class="fa-solid fa-people-roof"></i> Max : 10</p>
@@ -173,8 +175,6 @@
                     <button class="special">Book Now</button>
                 </div>
             </div>
-            <div class="deals-container"></div>
-            <div class="deals-container"></div>
         </section>
         <section class="tours">
             <div class="tours-content">
@@ -213,7 +213,7 @@
         <div class="footer-main">
             <div class="footer-main-header">
                 <img src="image/footer logo.png" alt="">
-                <h1>Hero Travel</h1>
+                <h1>Hero <span class="font">Travel</span></h1>
                 
             </div>
            <div class="footer-middle">
