--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
                 <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
                 <button style="margin: 20px;" class="special">See more</button>
             </div>
-            <!-- <video src="image/Group 40089.png" width="80%" height="" controls>            </video> -->
-            <img src="image/Group 40089.png" alt="">
+            <div class="tours-img">
+                <img src="image/Group 40089.png" alt="">
+            </div>
+            
         </section>
         <section class="newslatter">
             <div class="newslatter-content">
