--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="nav">
             <div class="nav-icon">
                 <img src="image/footer logo.png" alt="">
-                <h1>Hero <span class="font">Travel</span></h1>
+                <h1>Hyundai <span class="font">Express</span></h1>
             </div>
             <div class="nav-container">
                 <li class="font">Home</li>
@@ -46,7 +46,7 @@
                 <button class="normal">Where go</button>
                 <button class="normal">When<i class="fa-solid fa-arrow-down"></i></button>
                 <button class="normal">Select<i class="fa-solid fa-arrow-down"></i></button>
-                <button class="special"><i class="fa-solid fa-magnifying-glass"></i>Find</button>
+                <button class="special"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
             </div>
 
         </div>
@@ -223,11 +223,11 @@
         <div class="footer-main">
             <div class="footer-main-header">
                 <img src="image/footer logo.png" alt="">
-                <h1>Hero <span class="font">Travel</span></h1>
+                <h1>Hyundai <span class="font">Express</span></h1>
 
             </div>
             <div class="footer-middle">
-                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate.
+                <p>ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate.
                     Leo erat maecenas vitae elementum ultricies nullam. </p>
 
             </div>
@@ -239,7 +239,7 @@
             </div>
             <hr>
             <div class="footer-copyright">
-                <p>2017, All Rights Reserved.</p>
+                <p>2017,&#169; All Rights Reserved.</p>
             </div>
         </div>
     </footer>
